# odva_ethernetip

./: .gitmodules  CMakeLists.txt
cmake/: odva_ethernetipConfig.cmake.in
cmake/Hunter/: config.cmake
